# AudioVLCFramework

./: .gitignore  README.md  build.sh  icy-meta.py  run_tests.sh  vlc_modules.conf
cmake/: build.sh
faad/: build.sh
flac/: build.sh
libdvbpsi/: build.sh  info.md
libogg/: build.sh
mpg123/: build.sh
pkgconf/: build.sh
tests/: CMakeLists.txt  main.cpp
vlc/: AudioVLC.h  build.sh
